fix:UI overlap issue fixed in company profile settings

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -767,5 +767,5 @@ div[data-state='open'].fixed.inset-0 {
   @apply min-w-[177px];
 }
 .settings-card-detail .comapny-setting-text {
-  @apply max-w-[280px];
+  @apply max-w-[280px] font-medium text-lg;
 }
